# pgk-laboral-desk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  HANDOFF.md  MEMORY.md  README.md  app.py  boe_importer.py  chat_parser.py  client_manager.py  convenio_verifier.py  database.py  engine.py  exceptions.py  irpf_estimator.py  laboral_agent.py  logging_config.py  mcp_server.py  mcp_server_main.py  nomina_pdf.py  pyproject.toml  rates_verifier.py  requirements.txt  ss_calculator.py  test_boe_importer.py  test_chat_parser.py  test_client_manager.py  test_engine.py  test_mcp_server_main.py  validation.py  vgrag_search.py
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
.sisyphus/plans/: v3-enterprise-migration.md
data/: categorias_detalle.json  convenio_acuaticas_2025_2027.json  convenio_oficinas_despachos_alicante_2024_2026.json  empresa_mpc.json  sepe_code_tables.py  ss_config.json
data/knowledge_base/: contract_types.json  seguridad_social_rules.json  sistema_red_procedures.json
docs/: ARQUITECTURA.md  MCP_INTEGRATION.md  OPERACION_Y_LIMITES.md
laboral-backend/: .env.example  pyproject.toml  requirements.txt
laboral-backend/app/: database.py  main.py
laboral-backend/app/core/: circuit_breaker.py  config.py  deps.py  llm_queue.py  logging_config.py  metrics.py  middleware.py  security.py
laboral-backend/app/mcp/: server.py  server_main.py
laboral-backend/app/models/: agent_run.py  alert.py  chat_session.py  company.py  consultation.py  contract.py  convenio.py  dismissal.py  employee.py  payroll.py  user.py
laboral-backend/app/routes/: agent.py  alerts.py  audit.py  auth.py  chat.py  client.py  consultations.py  convenios.py  dismissal.py  employee_dismissal.py  employees.py  employees_bulk.py  health.py  payroll.py  reference.py  sepe.py  simulation.py  verify.py
laboral-backend/app/schemas/: agent.py  alert.py  chat.py  client.py  company.py  convenio.py  dismissal.py  employee.py  health.py  payroll.py  sepe.py  simulation.py  user.py  verify.py
laboral-backend/app/services/: audit_schemas.py  chat_parser.py  client_manager.py  convenio_verifier.py  engine.py  finiquito_calculator.py  irpf_calculator.py  laboral_agent.py  nomina_audit_engine.py  nomina_audit_parser.py  nomina_calculator.py  nomina_pdf.py  payroll_service.py  reta_calculator.py  sepe_mapper.py  sepe_validator.py  sepe_xml_generator.py  ss_calculator.py  validation.py  validators.py  vgrag_search.py
laboral-backend/tests/: conftest.py  test_agent_routes.py  test_auth.py  test_calculators.py  test_client_routes.py  test_convenios.py  test_employees_bulk.py  test_health.py  test_logout.py  test_mcp_server.py  test_real_nominas.py  test_sepe.py  test_simulation.py  test_validators.py  test_verify_routes.py
laboral-frontend/: index.html  package-lock.json  package.json
laboral-frontend/src/: App.tsx
laboral-frontend/src/components/: ErrorBoundary.tsx  LoginForm.tsx  Sidebar.tsx  TopBar.tsx
laboral-frontend/src/hooks/: useApiCall.ts  useAuth.ts
laboral-frontend/src/pages/: Alerts.tsx  Chat.tsx  Convenios.tsx  Dashboard.tsx  Dismissal.tsx  Employees.tsx  Payroll.tsx  Settings.tsx  Simulation.tsx
laboral-frontend/src/services/: api.ts
laboral-frontend/src/styles/: index.css
laboral-frontend/src/types/: index.ts
static/: app.js  index.html  panel.html  styles.css
