[project]
name = "pgk-laboral-desk"
version = "0.1.0"
description = "Aplicacion interna de apoyo laboral con lectura determinista y trazable al convenio."
requires-python = ">=3.11"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
markers = [
    "integration: tests que requieren red (BOE API)",
]
