[project]
name = "pgk-laboral-desk"
version = "0.2.0"
description = "Aplicacion interna de apoyo laboral con lectura determinista y trazable al convenio."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
    "gunicorn>=22.0",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.4",
]

# -- Ruff -----------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # do not perform function call in argument defaults
    "B007",   # loop control variable not used (existing code)
    "B017",   # blind exception in existing tests
    "B905",   # zip strict in existing code
    "F841",   # unused variable in existing code
    "SIM108", # ternary operator
    "SIM103", # return condition directly
    "RUF001", # ambiguous unicode chars (Spanish text uses multiplication sign etc.)
    "RUF003", # ambiguous unicode in comments
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.isort]
known-first-party = [
    "engine", "database", "chat_parser", "ss_calculator",
    "irpf_estimator", "validation", "exceptions", "logging_config",
    "client_manager", "convenio_verifier", "rates_verifier", "nomina_pdf",
]

# -- Pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
python_files = ["test_*.py"]
markers = [
    "integration: tests que requieren red (BOE API)",
]
