[project]
name = "pgk-laboral-desk"
version = "0.2.0"
description = "Aplicacion interna de apoyo laboral con lectura determinista y trazable al convenio."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
    "gunicorn>=22.0",
    "weasyprint>=62.0",
    "mcp>=1.0",
]

[project.scripts]
pgk-laboral-mcp = "mcp_server_main:run"

[tool.setuptools]
py-modules = [
    "app",
    "engine",
    "ss_calculator",
    "irpf_estimator",
    "chat_parser",
    "database",
    "nomina_pdf",
    "client_manager",
    "convenio_verifier",
    "rates_verifier",
    "exceptions",
    "validation",
    "logging_config",
    "boe_importer",
    "laboral_agent",
    "vgrag_search",
    "mcp_server",
    "mcp_server_main",
]

[project.optional-dependencies]
agent = [
    "langchain-google-genai>=2.1",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

# -- Ruff -----------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # do not perform function call in argument defaults
    "B007",   # loop control variable not used (existing code)
    "B017",   # blind exception in existing tests
    "B905",   # zip strict in existing code
    "F841",   # unused variable in existing code
    "SIM108", # ternary operator
    "SIM103", # return condition directly
    "RUF001", # ambiguous unicode chars (Spanish text uses multiplication sign etc.)
    "RUF003", # ambiguous unicode in comments
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.isort]
known-first-party = [
    "engine", "database", "chat_parser", "ss_calculator",
    "irpf_estimator", "validation", "exceptions", "logging_config",
    "client_manager", "convenio_verifier", "rates_verifier", "nomina_pdf",
    "laboral_agent",
]

# -- Pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
python_files = ["test_*.py"]
markers = [
    "integration: tests que requieren red (BOE API)",
]
