[project]
name = "pgk-laboral-desk"
version = "3.0.0"
description = "Software laboral profesional con inteligencia normativa"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "httpx>=0.28",
    "weasyprint>=62.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
agent = [
    "langchain-google-genai>=2.1",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "B007",
    "B905",
    "F841",
    "SIM108",
    "SIM103",
    "RUF001",
    "RUF003",
    "RUF012",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
markers = [
    "integration: tests que requieren red",
]
